--- a/pages/up-coming.html
+++ b/pages/up-coming.html
@@ -8,7 +8,7 @@ title: Up Coming Events
   {% assign postStartDate = post.date | date: "%s" | plus: 172800 %}
   {% if postStartDate >= curDate %}
     <a href="{{ site.github.url }}{{ post.url }}">
-      <h1 style="margin-left: 10px;">{{ post.date | date: "%Y-%m-%d"}}</h1>
+      <h1 style="margin-left: 10px;">{{ post.date | date: "%A, %e %B %Y"}}</h1>
       <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }}); height: 200px;"{% endif %}>
         <h2><span>{{ post.title }}</span></h2>
       </div>
