--- a/pages/up-coming.html
+++ b/pages/up-coming.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Up Coming Events
+title: Upcoming Workshops
 ---
 {% assign curDate = site.time | date: "%s" | plus: 0 %}
 
