--- a/pages/about.html
+++ b/pages/about.html
@@ -3,6 +3,6 @@ layout: misc
 title: About
 ---
  
- {% include about_old.html %}
+ {% include_relative about_old.html %}
  
  {% include team.html %}
